--- a/a32.html
+++ b/a32.html
@@ -17,55 +17,98 @@
         <!-- Add a menu icon here -->
         <span class="fa fa-bars menu-icon"></span>
         <div class="header-right">
-          <a href="#">Solve</a>
-          <a href="#">Sign in</a>
-          <a href="#" class="login">Log in</a>
+          <a href="#">Contact us</a>
+          <a href="#">Register</a>
+          <a href="#" class="login">Sign in</a>
         </div>
       </div>
     </header>
     <div class="top-wrapper">
       <div class="container">
-        <h1>Learn with SOLVEURPRO</h1>
-        <p>From first day to finals, get homework help, exam prep &</p>
-        <p>writing support—tailored to your courses.</p>
+        <h1>Ruang Belajar Coding</h1>
+        <h1>Belajar untuk Era Masa Depan.</h1>
+        <p>Ruang Belajar adalah komunitas pegiat programming yang siap membantu Anda.</p>
+        <p>Sangat cocok bagi anda yang baru mau memulai belajar pemrogramman.</p>
+        <p>DAFTAR SEKARANG!</p>
         <div class="btn-wrapper">
-          <a href="#" class="btn getStarted">Get Started</a>
+          <a href="#" class="btn email"><span class="fa fa-solid fa-envelope"></span>Email</a>
+          <p>atau</p>
+          <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Facebook</a>
+          <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Twitter</a>
+          <a href="#" class="btn linkedin"><span class="fa fa-brands fa-linkedin"></span>Linkedin</a>
         </div>
       </div>
     </div>
     <div class="lesson-wrapper">
       <div class="container">
         <div class="heading">
-          <h2>Learn Where to Get Started!</h2>
+          <h1>Best Course!</h1>
+          <h2>Check out what is hidden!</h2>
         </div>
         <div class="lessons">
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/html.png">
-              <p>HTML & CSS</p>
+              <img src="dice.png" width="250" height="250">
+              <div class="overlay">
+                <div class="text">Java Script</div>
+              </div>
             </div>
-            <p class="text-contents">Languages used to build and design the appearances of your websites. HTML adds the structure, and CSS styles it.</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/jQuery.png">
-              <p>jQuery</p>
+              <img src="dice.png" width="250" height="250">
+              <div class="overlay">
+                <div class="text">jQuery</div>
+              </div>
             </div>
-            <p class="text-contents">A fast, feature-rich and easy-to-use JavaScript library that handles animations and Ajax requests.</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/ruby.png">
-              <p>Ruby</p>
+              <img src="dice.png" width="250" height="250">
+              <div class="overlay">
+                <div class="text">Ruby</div>
+              </div>
             </div>
-            <p class="text-contents">A dynamic, general-purpose language that is simple and productive. It is commonly used around the world to build web applications.</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/php.png">
-              <p>PHP</p>
+              <img src="dice.png" width="250" height="250">
+              <div class="overlay">
+                <div class="text">PHP</div>
+              </div>
             </div>
-            <p class="text-contents">An open source scripting language that can be embedded into HTML, and well suited for web development.</p>
+          </div>
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="dice.png" width="250" height="250">
+              <div class="overlay">
+                <div class="text">C++</div>
+              </div>
+            </div>
+          </div>
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="dice.png" width="250" height="250">
+              <div class="overlay">
+                <div class="text">Python</div>
+              </div>
+            </div>
+          </div>
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="dice.png" width="250" height="250">
+              <div class="overlay">
+                <div class="text">C#</div>
+              </div>
+            </div>
+          </div>
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="dice.png" width="250" height="250">
+              <div class="overlay">
+                <div class="text">Action Script</div>
+              </div>
+            </div>
           </div>
           <div class="clear"></div>
         </div>
@@ -74,16 +117,29 @@
     <div class="message-wrapper">
       <div class="container">
         <div class="heading">
-          <h2>Ready to become an awesome programmer?</h2>
-          <h3>Let's learn to code, learn to be creative!</h3>
+          <h2>Tingkatkan kemampuanmu bersama kami!</h2>
+          <h3>Happy Learning!!</h3>
         </div>
-        <span class="btn message">Start Learning</span>
+        <span class="btn message">Mulai Belajar</span>
       </div>
     </div>
     <footer>
+      <div class="footer-content">
+        <h3>Ruang Belajar Coding</h3>
+        <p>Belajar Bersama Untuk Era Digital Mendatang</p>
+        <ul class="socials">
+          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+          <li><a href="#"><i class="fa fa-Twitter"></i></a></li>
+          <li><a href="#"><i class="fa fa-Instagram"></i></a></li>
+          <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+        </ul>
+      </div>
       <div class="container">
         <img src="https://blogger.googleusercontent.com/img/a/AVvXsEhZReXGljezx8sVgsFWevInoPC79x9s2wBhfJ1h53C0020we3XuyT1xKFxOCpp-fIzbn6KVEhYu6r7OyiqlDpisxrnEuR4XlE6cHsxs1RUU8xwF1bJPx3aBlugfOJB4Ljm2zIR6nxCgdmdbmmJQwnxgRfSPMY78Z6gZvoNPL93eP6Bo1kcPgPvbAjNNiA=s16000">
         <p>Be Creative - Be Innovative</p>
+      </div>
+      <div class="footer-bottom">
+        <p>Copyright &copy;2022 Kelompok A32. designed by A32</p>
       </div>
     </footer>
   </body>
