--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SOLVEURPRO</title>
+    <title>PROGATE A32</title>
     <link rel="stylesheet" href="stylesheet2.css">
     <link rel="stylesheet" href="responsiver2.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
