--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <div class="container">
         <div class="header-left">
-          <img class="logo" src="https://blogger.googleusercontent.com/img/a/AVvXsEhZReXGljezx8sVgsFWevInoPC79x9s2wBhfJ1h53C0020we3XuyT1xKFxOCpp-fIzbn6KVEhYu6r7OyiqlDpisxrnEuR4XlE6cHsxs1RUU8xwF1bJPx3aBlugfOJB4Ljm2zIR6nxCgdmdbmmJQwnxgRfSPMY78Z6gZvoNPL93eP6Bo1kcPgPvbAjNNiA=s16000">
+          <img class="logo" src="logoA32.png">
         </div>
         <!-- Add a menu icon here -->
         <span class="fa fa-bars menu-icon"></span>
@@ -134,8 +134,8 @@
           <li><a href="#"><i class="fa fa-youtube"></i></a></li>
         </ul>
       </div>
-      <div class="container">
-        <img src="https://blogger.googleusercontent.com/img/a/AVvXsEhZReXGljezx8sVgsFWevInoPC79x9s2wBhfJ1h53C0020we3XuyT1xKFxOCpp-fIzbn6KVEhYu6r7OyiqlDpisxrnEuR4XlE6cHsxs1RUU8xwF1bJPx3aBlugfOJB4Ljm2zIR6nxCgdmdbmmJQwnxgRfSPMY78Z6gZvoNPL93eP6Bo1kcPgPvbAjNNiA=s16000">
+      <div class="footer-container">
+        <img class="image" src="logoA32.png">
         <p>Be Creative - Be Innovative</p>
       </div>
       <div class="footer-bottom">
