--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <p>Be Creative - Be Innovative</p>
       </div>
       <div class="footer-bottom">
-        <p>Copyright &copy;2022 Kelompok A32. designed by A32</p>
+        <p>Copyright &copy;2022 Kelompok A32. Designed by A32</p>
       </div>
     </footer>
   </body>
