--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         <!-- Add a menu icon here -->
         <span class="fa fa-bars menu-icon"></span>
         <div class="header-right">
-          <a href="#">Contact us</a>
-          <a href="#">Register</a>
+          <a href="#" class="home">Home</a>
+          <a href="#" class="contact">Contact us</a>
+          <a href="#" class="register">Register</a>
           <a href="#" class="login">Sign in</a>
         </div>
       </div>
@@ -129,8 +130,8 @@
         <p>Belajar Bersama Untuk Era Digital Mendatang</p>
         <ul class="socials">
           <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fa fa-Twitter"></i></a></li>
-          <li><a href="#"><i class="fa fa-Instagram"></i></a></li>
+          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+          <li><a href="#"><i class="fa fa-instagram"></i></a></li>
           <li><a href="#"><i class="fa fa-youtube"></i></a></li>
         </ul>
       </div>
