--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PROGATE A32</title>
+    <title>RUANG BELAJAR CODING</title>
     <link rel="stylesheet" href="stylesheet2.css">
     <link rel="stylesheet" href="responsiver2.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   </head>
   <body>
     <header>
@@ -32,11 +31,11 @@
         <p>Sangat cocok bagi anda yang baru mau memulai belajar pemrogramman.</p>
         <p>DAFTAR SEKARANG!</p>
         <div class="btn-wrapper">
-          <a href="#" class="btn email"><span class="fa fa-solid fa-envelope"></span>Email</a>
+          <a class="btn email"><span class="email"></span>Email</a>
           <p>atau</p>
-          <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Facebook</a>
-          <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Twitter</a>
-          <a href="#" class="btn linkedin"><span class="fa fa-brands fa-linkedin"></span>Linkedin</a>
+          <a class="btn facebook"><span class="facebook"></span>Facebook</a>
+          <a class="btn twitter"><span class="twitter"></span>Twitter</a>
+          <a class="btn linkedin"><span class="linkedin"></span>Linkedin</a>
         </div>
       </div>
     </div>
@@ -127,20 +126,20 @@
     <footer>
       <div class="footer-content">
         <h3>Ruang Belajar Coding</h3>
-        <p>Belajar Bersama Untuk Era Digital Mendatang</p>
+        <p>"Belajar Bersama Untuk Era Digital Mendatang"</p>
         <ul class="socials">
-          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-          <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+          <li style="list-style-type: none;"><a1 href="#"><i class="iconify" data-icon="entypo-social:facebook-with-circle"></i></a1></li>
+          <li style="list-style-type: none;"><a2 href="#"><i class="iconify" data-icon="entypo-social:linkedin"></i></a2></li>
+          <li style="list-style-type: none;"><a3 href="#"><i class="iconify" data-icon="entypo-social:instagram-with-circle"></i></a3></li>
+          <li style="list-style-type: none;"><a4 href="#"><i class="iconify" data-icon="entypo-social:youtube-with-circle"></i></a4></li>
         </ul>
       </div>
       <div class="footer-container">
         <img class="image" src="logoA32.png">
-        <p>Be Creative - Be Innovative</p>
+        <p>-Be Creative - Be Innovative-</p>
       </div>
       <div class="footer-bottom">
-        <p>Copyright &copy;2022 Kelompok A32. Designed by A32</p>
+        <p>Copyright &copy;2022 | Group A32 | Designed by A32</p>
       </div>
     </footer>
   </body>
