--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       </div>
       <div class="footer-container">
         <img class="image" src="logoA32.png">
-        <p>-Be Creative - Be Innovative-</p>
+        <p>-Be Creative Be Innovative-</p>
       </div>
       <div class="footer-bottom">
         <p>Copyright &copy;2022 | Group A32 | Designed by A32</p>
