--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
         <div class="header-left">
           <img class="logo" src="logoA32.png">
         </div>
-        <!-- Add a menu icon here -->
-        <span class="fa fa-bars menu-icon"></span>
         <div class="header-right">
           <a href="#" class="home">Home</a>
           <a href="#" class="contact">Contact us</a>
@@ -24,7 +22,7 @@
       </div>
     </header>
     <div class="top-wrapper">
-      <div class="container">
+      <div class="container">  
         <h1>Ruang Belajar Coding</h1>
         <h1>Belajar untuk Era Masa Depan.</h1>
         <p>Ruang Belajar adalah komunitas pegiat programming yang siap membantu Anda.</p>
@@ -128,10 +126,10 @@
         <h3>Ruang Belajar Coding</h3>
         <p>"Belajar Bersama Untuk Era Digital Mendatang"</p>
         <ul class="socials">
-          <li style="list-style-type: none;"><a1 href="#"><i class="iconify" data-icon="entypo-social:facebook-with-circle"></i></a1></li>
-          <li style="list-style-type: none;"><a2 href="#"><i class="iconify" data-icon="entypo-social:linkedin"></i></a2></li>
-          <li style="list-style-type: none;"><a3 href="#"><i class="iconify" data-icon="entypo-social:instagram-with-circle"></i></a3></li>
-          <li style="list-style-type: none;"><a4 href="#"><i class="iconify" data-icon="entypo-social:youtube-with-circle"></i></a4></li>
+          <li style="list-style-type: none;"><a1><i></i></a1></li>
+          <li style="list-style-type: none;"><a2><i></i></a2></li>
+          <li style="list-style-type: none;"><a3></i></a3></li>
+          <li style="list-style-type: none;"><a4></i></a4></li>
         </ul>
       </div>
       <div class="footer-container">
