--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <div class="container">
         <div class="header-left">
-          <img class="logo" src="logoA32.png">
+          <img class="logo" src="image/logoA32.png">
         </div>
         <div class="header-right">
           <a href="#" class="home">Home</a>
@@ -46,7 +46,7 @@
         <div class="lessons">
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="dice.png" width="250" height="250">
+              <img src="image/dice.png" width="250" height="250">
               <div class="overlay">
                 <div class="text">Java Script</div>
               </div>
@@ -54,7 +54,7 @@
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="dice.png" width="250" height="250">
+              <img src="image/dice.png" width="250" height="250">
               <div class="overlay">
                 <div class="text">jQuery</div>
               </div>
@@ -62,7 +62,7 @@
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="dice.png" width="250" height="250">
+              <img src="image/dice.png" width="250" height="250">
               <div class="overlay">
                 <div class="text">Ruby</div>
               </div>
@@ -70,7 +70,7 @@
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="dice.png" width="250" height="250">
+              <img src="image/dice.png" width="250" height="250">
               <div class="overlay">
                 <div class="text">PHP</div>
               </div>
@@ -78,7 +78,7 @@
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="dice.png" width="250" height="250">
+              <img src="image/dice.png" width="250" height="250">
               <div class="overlay">
                 <div class="text">C++</div>
               </div>
@@ -86,7 +86,7 @@
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="dice.png" width="250" height="250">
+              <img src="image/dice.png" width="250" height="250">
               <div class="overlay">
                 <div class="text">Python</div>
               </div>
@@ -94,7 +94,7 @@
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="dice.png" width="250" height="250">
+              <img src="image/dice.png" width="250" height="250">
               <div class="overlay">
                 <div class="text">C#</div>
               </div>
@@ -102,7 +102,7 @@
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="dice.png" width="250" height="250">
+              <img src="image/dice.png" width="250" height="250">
               <div class="overlay">
                 <div class="text">Action Script</div>
               </div>
@@ -133,7 +133,7 @@
         </ul>
       </div>
       <div class="footer-container">
-        <img class="image" src="logoA32.png">
+        <img class="image" src="image/logoA32.png">
         <p>-Be Creative Be Innovative-</p>
       </div>
       <div class="footer-bottom">
